# vscripts

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  _utils.py  atempo.py  delay.py  downloadyt.py  extract.py  hasten.py  pyproject.toml  reencode.py  requirements-dev.txt  requirements.txt  setup.cfg  subtitles.py  vscript.py  vscript2.py
.github/: dependabot.yml
.github/workflows/: pytests.yaml
commands/: __init__.py  _utils.py  append.py  atempo.py  delay.py  extract.py  hasten.py
scripts/: downloadfile.py  reencode.py  subtitles.py  vscript.py
tests/: _utils.py  conftest.py  matcher_test.py
tests/cmd/: do_test.py
tests/commands/: _utils.py  append_test.py  atempo_test.py  extract_test.py  generate_test.py  merge_test.py  shift_test.py  translate_test.py
vscripts/: __init__.py  __main__.py  cli.py  commands.py  constants.py  main.py  matcher.py  streams.py  utils.py
vscripts/commands/: __init__.py  _append.py  _atempo.py  _extract.py  _generate.py  _merge.py  _shift.py  _translate.py  _utils.py
vscripts/data/: __init__.py  language.py  matcher.py  models.py  streams.py
vscripts/downloader/: __init__.py  _work.py  chunck_downloader.py  yt_downloader.py
vscripts/reporters/: __init__.py  errors.py  logs.py  output.py
vscripts/utils/: __init__.py  _srt.py  _utils.py  _whisper.py
