[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vscripts"
version = "0.1.0"
description = "A utility to automate video editing tasks."
readme = "README.md"
license = { file = "LICENSE.md" }
authors = [{ name = "Iago Santos" }]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
  "pyutils @ git+https://github.com/iagocanalejas/pyutils.git@master",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vscripts*"]

[tool.setuptools.package-data]
vscripts = ["py.typed"]


[tool.pyright]
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
deprecateTypingAliases = true
exclude = [
  "**/build",
  "**/dist",
  "**/out",
  "**/venv",
]
