[metadata]
name = vscripts
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Iago Santos
license = MIT
license_files = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
dependency_links = https://github.com/iagocanalejas/pyutils.git@master#egg=pyutils
